<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>innowake.release.base</groupId>
		<artifactId>base-skeleton4</artifactId>
		<version>1.0.2</version>
	</parent>

	<groupId>innowake.products.mining</groupId>
	<artifactId>mining-integration-test</artifactId>
	<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>

	<properties>
		<orientdb.version>3.1.6</orientdb.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<toolchains.jdk.version>17</toolchains.jdk.version>
		<toolchains.jdk.vendor>zulu</toolchains.jdk.vendor>
		<toolchains.jdk.id>zulu 17</toolchains.jdk.id>
		<spring-graphql.version>1.0.3</spring-graphql.version>
		<java.17.options>
			--add-opens=java.base/java.util=ALL-UNNAMED
			--add-opens=java.base/java.lang=ALL-UNNAMED
		</java.17.options>
	</properties>
	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine> ${java.17.options} -Xmx4G -Dfile.encoding=Cp1252 ${argLine}</argLine>
							<forkCount>1</forkCount>
							<runOrder>alphabetical</runOrder>
							<org.slf4j.simpleLogger.defaultLogLevel>ERROR</org.slf4j.simpleLogger.defaultLogLevel>
							<org.slf4j.simpleLogger.showDateTime>true</org.slf4j.simpleLogger.showDateTime>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-install-plugin</artifactId>
						<version>2.4</version>
						<executions>
							<execution>
								<id>install-test-data</id>
								<goals>
									<goal>install-file</goal>
								</goals>
								<phase>${none-dist-install-phase}</phase>
								<configuration>
									<file>${project.basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}test-data-orient.sql</file>
									<artifactId>${project.artifactId}</artifactId>
									<classifier>sources</classifier>
									<groupId>${project.groupId}</groupId>
									<version>${project.version}</version>
									<packaging>jar</packaging>
									<generatePom>false</generatePom>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.7</version>
						<dependencies>
							<dependency>
								<groupId>ant-contrib</groupId>
								<artifactId>ant-contrib</artifactId>
								<version>1.0b3</version>
								<exclusions>
									<exclusion>
										<groupId>ant</groupId>
										<artifactId>ant</artifactId>
									</exclusion>
								</exclusions>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<phase>${none-dist-deploy-phase}</phase>
								<configuration>
									<exportAntProperties>true</exportAntProperties>
									<tasks>
										<taskdef
											resource="net/sf/antcontrib/antcontrib.properties"
											classpathref="maven.plugin.classpath" />
										<if>
											<contains string="${project.version}"
												substring="snapshot" casesensitive="false" />
											<then>
												<property name="repo.url"
													value="https://pd-nexus2.deloitte.com/nexus/content/repositories/snapshots" />
												<property name="repo.id" value="snapshots" />
											</then>
											<else>
												<property name="repo.url"
													value="https://pd-nexus2.deloitte.com/nexus/content/repositories/releases" />
												<property name="repo.id" value="releases" />
											</else>
										</if>
									</tasks>
								</configuration>
								<goals>
									<goal>run</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.7</version>
						<executions>
							<execution>
								<id>deploy-test-data</id>
								<goals>
									<goal>deploy-file</goal>
								</goals>
								<phase>${none-dist-deploy-phase}</phase>
								<configuration>
									<file>${project.basedir}${file.separator}src${file.separator}test${file.separator}resources${file.separator}test-data-orient.sql</file>
									<artifactId>mining-test-data</artifactId>
									<groupId>${project.groupId}</groupId>
									<version>${project.version}</version>
									<packaging>sql</packaging>
									<repositoryId>${repo.id}</repositoryId>
									<url>${repo.url}</url>
									<generatePom>false</generatePom>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<!-- version 3.1.2 and above have some problems with m2e (unknown error 
							in 1st line of pom...) -->
						<version>3.1.1</version>
						<executions>
							<execution>
								<phase>${dist-only-package-phase}</phase>
								<goals>
									<goal>test-jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-community</artifactId>
					<version>${orientdb.version}</version>
					<type>zip</type>
				</dependency>
				<dependency>
					<groupId>org.postgresql</groupId>
					<artifactId>postgresql</artifactId>
					<version>42.5.0</version>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-database</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
					<type>sql</type>
					<exclusions>
						<exclusion>
							<groupId>ch.qos.logback</groupId>
							<artifactId>logback-classic</artifactId>
						</exclusion>
						<exclusion>
							<groupId>ch.qos.logback</groupId>
							<artifactId>logback-core</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-shared</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-api-client${dist-suffix}</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-api-server${dist-suffix}</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>ch.qos.logback</groupId>
							<artifactId>logback-classic</artifactId>
						</exclusion>
						<exclusion>
							<groupId>ch.qos.logback</groupId>
							<artifactId>logback-core</artifactId>
						</exclusion>
						<exclusion>
							<groupId>io.netty</groupId>
							<artifactId>netty-common</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-data-plugin${dist-suffix}</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
					<classifier>bundle</classifier>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-core</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>commons-lang</groupId>
					<artifactId>commons-lang</artifactId>
					<version>2.6</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.lz4</groupId>
					<artifactId>lz4-java</artifactId>
					<version>1.4.0</version>
					<scope>compile</scope>
					<exclusions>
						<exclusion>
							<groupId>*</groupId>
							<artifactId>*</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-client</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-jdbc</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>com.googlecode.concurrentlinkedhashmap</groupId>
					<artifactId>concurrentlinkedhashmap-lru</artifactId>
					<version>1.4.2</version>
					<scope>compile</scope>
					<exclusions>
						<exclusion>
							<groupId>*</groupId>
							<artifactId>*</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-tools</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>net.java.dev.jna</groupId>
					<artifactId>jna</artifactId>
					<version>4.5.0</version>
					<scope>compile</scope>
					<exclusions>
						<exclusion>
							<groupId>*</groupId>
							<artifactId>*</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>net.java.dev.jna</groupId>
					<artifactId>jna-platform</artifactId>
					<version>4.5.0</version>
					<scope>compile</scope>
					<exclusions>
						<exclusion>
							<groupId>*</groupId>
							<artifactId>*</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-server</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
					<version>1.2</version>
					<scope>compile</scope>
					<exclusions>
						<exclusion>
							<groupId>*</groupId>
							<artifactId>*</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>innowake.lib.flyway</groupId>
					<artifactId>lib-flyway-commandline</artifactId>
					<version>99.9.99-TRUNK-BASE-SNAPSHOT</version>
					<type>zip</type>
					<exclusions>
						<exclusion>
							<groupId>com.google.code.gson</groupId>
							<artifactId>gson</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.springframework.graphql</groupId>
					<artifactId>spring-graphql-test</artifactId>
					<version>${spring-graphql.version}</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-webflux</artifactId>
					<version>2.5.12</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.skyscreamer</groupId>
					<artifactId>jsonassert</artifactId>
					<version>1.5.0</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>io.netty</groupId>
					<artifactId>netty-common</artifactId>
					<version>4.1.84.Final</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>bundle</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.google.code.maven-replacer-plugin</groupId>
						<artifactId>replacer</artifactId>
						<version>1.5.3</version>
						<executions>
							<execution>
								<phase>generate-sources</phase>
								<goals>
									<goal>replace</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<includes>
								<include>${basedir}/src/test/java/innowake/mining/test/*.java</include>
							</includes>
							<replacements>
								<replacement>
									<token>import org.apache</token>
									<value>import iw.ext.org.apache</value>
								</replacement>
							</replacements>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine> ${java.17.options} -Xmx4G -Dfile.encoding=Cp1252 ${argLine}</argLine>
							<forkCount>1</forkCount>
							<runOrder>alphabetical</runOrder>
							<org.slf4j.simpleLogger.defaultLogLevel>ERROR</org.slf4j.simpleLogger.defaultLogLevel>
							<org.slf4j.simpleLogger.showDateTime>true</org.slf4j.simpleLogger.showDateTime>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<!-- version 3.1.2 and above have some problems with m2e (unknown error in 1st line of pom...) -->
						<version>3.1.1</version>
						<executions>
							<execution>
								<phase>${dist-only-package-phase}</phase>
								<goals>
									<goal>test-jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-api-server-dist</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>ch.qos.logback</groupId>
							<artifactId>logback-classic</artifactId>
						</exclusion>
						<exclusion>
							<groupId>ch.qos.logback</groupId>
							<artifactId>logback-core</artifactId>
						</exclusion>
						<exclusion>
							<groupId>io.netty</groupId>
							<artifactId>netty-common</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-data-plugin-dist</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-api-client-dist-bundle</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>*</groupId>
							<artifactId>*</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>innowake.products.mining</groupId>
					<artifactId>mining-data</artifactId>
					<version>99.9.99-TRUNK-MINING-SNAPSHOT</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.springframework.data</groupId>
					<artifactId>spring-data-commons</artifactId>
					<version>2.2.4.RELEASE</version>
					<scope>test</scope>
					<exclusions>
						<exclusion>
							<groupId>org.slf4j</groupId>
							<artifactId>slf4j-api</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
					<version>28.1-jre</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-core</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-client</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-jdbc</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>com.orientechnologies</groupId>
					<artifactId>orientdb-server</artifactId>
					<version>${orientdb.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.springframework.graphql</groupId>
					<artifactId>spring-graphql-test</artifactId>
					<version>${spring-graphql.version}</version>
				</dependency>
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-webflux</artifactId>
					<version>2.5.12</version>
				</dependency>
				<dependency>
					<groupId>org.skyscreamer</groupId>
					<artifactId>jsonassert</artifactId>
					<version>1.5.0</version>
				</dependency>
				<dependency>
					<groupId>io.netty</groupId>
					<artifactId>netty-common</artifactId>
					<version>4.1.84.Final</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>